--- a/app.json
+++ b/app.json
@@ -15,16 +15,37 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "location",
+          "fetch",
+          "remote-notification"
+        ]
+      },
+      "plugins": [
+        [
+          "@react-native-async-storage/async-storage",
+          {
+            "version": "latest"
+          }
+        ]
+      ]
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ali.babaei.SensorTrackingApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "b0f10007-8e52-4b8d-9024-1a9a224bbc5c"
+      }
     }
   }
 }
