--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "^11.2.1",
+    "@types/react": "~18.2.45",
+    "axios": "^1.6.7",
     "expo": "~50.0.4",
+    "expo-background-fetch": "^11.8.1",
+    "expo-notifications": "^0.27.6",
+    "expo-sensors": "^12.9.1",
     "expo-status-bar": "~1.11.1",
+    "expo-task-manager": "^11.7.2",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
